# Dotfiles

hypr/: hyprland.conf  hyprland.conf.save  scheme-toggle.fish  wallpaper-switch.sh
hypr/scheme/: current.conf
modules/music/: AppIcon.qml  ColorExtractor.qml  ControlBtn.qml  MusicPill.qml  test2
quickshell/: CMakeLists.txt  shell.qml
quickshell/OshiroShell/: qmldir
quickshell/config/: settings.json
quickshell/modules/music/: ColorExtractor.qml  MusicPill.qml
quickshell/modules/overlay/: MenuOverlay.qml  Overlay.qml  WallpaperOverlay.qml
quickshell/modules/overlay/tabs/: AppsTab.qml  CreditsTab.qml  MenuTab.qml  SettingsTab.qml  ThemesTab.qml  WallCard.qml  WallpaperTab.qml  WallpaperTab.qml.save  qmldir
quickshell/modules/shared/: AppState.qml  BlurRect.qml  SettingsSlider.qml  SettingsToggle.qml
quickshell/plugin/: Plugin.cpp  RegionPlugin.cpp  WaylandRegion.cpp  WaylandRegion.h
quickshell/state/: selected_gif.txt
quickshell/utils/: build.sh  build_plugin.sh  detect_namespace.sh  install_plugin.sh  toggle.sh
schemes/crimson-dark/medium/: dark.txt
schemes/deep-purple/medium/: dark.txt
schemes/electric-blue/medium/: dark.txt
schemes/forest-green/medium/: dark.txt
schemes/fuji-night/medium/: dark.txt
schemes/golden-hour/medium/: dark.txt
schemes/ivory-light/medium/: dark.txt
schemes/lolita-blue/medium/: dark.txt
schemes/meu-scheme/medium/: dark.txt
schemes/pure-white/medium/: dark.txt  light.txt
